# bayleaf

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/agents/: adversarial-reviewer.md  doc-keeper.md  test-writer.md
api/: __init__.py  agent_binding_store.py  agent_chat.py  agent_output_cache.py  archivist.py  archivist_retrieval.py  auth.py  authored_pipeline.py  base_store.py  card_readout.py  chat.py  chat_store.py  deid.py  feedback.py  feedback_agent.py  feedback_store.py  job_store.py  library_store.py  main.py  pipeline.py  pipeline_store.py  review_store.py  safe_harbor.py  settings_store.py  share_ledger.py  share_store.py  triage_cache.py  triage_cache_store.py
api/routers/: __init__.py  agent_chat.py  files.py  intake.py  nextflow.py  node_author.py  node_observations.py  pipeline_run.py  pipelines_lifecycle.py  review_queue.py  settings.py
app/: streamlit_app.py
audit/: AUDIT_PLAN.md  README.md  SYNTHESIS.md  agent-safety.md  contract.md  data-lineage.md  demo-readiness.md  integration.md  journeys.md  reliability.md  science-repro.md  truthfulness.md  ui-ux.md  ux-duplicate-data-review.md
audit/gap_analysis/: 00-master-sequencing.md  README.md  delta-review-2026-07-12.md  design-review-2026-07-11.md  ws-01-fail-closed-gate.md  ws-02-identity-provenance.md  ws-03-ingestion-adapter.md  ws-04-giab-concordance.md  ws-05-config-and-runbook-dimensions.md  ws-06-registry-extensibility-and-metric-bugs.md  ws-07-ai-earning-its-place.md
audit/wishlist/: w1.md  w2.md  w3.md  w4.md
data/: README.md
data/RUN-2026-07-08-GIAB-HG002/: NOTE.md  SampleSheet.csv  demux_stats.csv  origin  qc_metrics.csv  sample_metadata.csv  versions.txt
data/RUN-2026-07-11-CLINVAR-RTH/: NOTE.md  SampleSheet.csv  demux_stats.csv  qc_metrics.csv  route_to_human  sample_metadata.csv  variants.csv
data/mock_run_01/: SampleSheet.csv  demux_stats.csv  qc_metrics.csv  sample_metadata.csv
data/mock_run_02/: SampleSheet.csv  demux_stats.csv  qc_metrics.csv  sample_metadata.csv
data/mock_run_03/: SampleSheet.csv  demux_stats.csv  qc_metrics.csv  sample_metadata.csv
data/mock_run_scale_30/: SampleSheet.csv  demux_stats.csv  qc_metrics.csv  sample_metadata.csv
deploy/: Dockerfile.api  docker-compose.yml
deploy/postgres/: docker-compose.yml
deploy/telemetry/: README.md  datadog-openmetrics.conf.yaml  docker-compose.yml  grafana-dashboard.json  grafana-dashboards.yml  grafana-datasource.yml  otel-collector-config.yaml  prometheus.yml
docs/: DOCUMENTATION_HABITS.md  HISTORY.md  TABLE_OF_CONTENTS.md
docs/_templates/: adr.md  design-handoff.md  doc.md  evaluation-case.md  journal.md  requirement.md  risk.md
docs/adr/: ADR-0001-deterministic-gate-advisory-ai.md  ADR-0002-event-driven-core-provenance-ledger.md  ADR-0003-deployment-agnostic-ports.md  ADR-0004-vcf-first-giab-substrate.md  ADR-0005-config-layer-and-profiles.md  ADR-0006-ai-off-by-default-fallback.md  ADR-0007-ml-ready-structured-outputs.md  ADR-0008-issue-taxonomy-suppression-escalation.md  ADR-0009-corpora-retrieval-upskilling.md  ADR-0010-ticketing-notify-read-api.md  ADR-0011-tooling-and-reproducibility.md  ADR-0012-agent-scoping-model-tiering.md  ADR-0013-gate-architecture-verdict-policy.md  ADR-0014-productionization-fastapi-react.md  ADR-0015-layered-data-contract.md  ADR-0016-postgres-port.md  ADR-0017-identity-rbac-authoring-lifecycle.md  ADR-0018-variant-interpretation-advisory-evidence.md  ADR-0019-pipeline-versioning-run-pinning-edit-lock.md  ADR-0020-operator-authored-custom-processes.md  ADR-0021-operator-gated-scheduled-pipeline-processing.md  ADR-0022-agent-observation-binding.md  ADR-0023-agent-taxonomy-and-action-boundary.md  ADR-0024-scope-by-wiring.md  ADR-0025-versioned-reversible-agent-config.md
docs/data/: licensing.md  metric_registry.md  nf-core-conventions.md  provenance.md  qc_metrics-rare-disease.md  qc_metrics-sources.md  qc_metrics.md  schemas.md  strategy.md
docs/demo/: demo_plan.md  one-pager.md  run-of-show.md
docs/design/: agent-authoring-contract.md  agent-capabilities.md  agents.md  architecture.md  data-platform-and-archivist.md  frontend-design-brief.md  monitoring-agent.md  nextflow-codegen.md  node-authoring-agent.md  run-layout-emit-consume.md  system-agents-chat.md  ui-conventions.md  variant-interpretation.md
docs/journal/: 2026-07-07-design-and-planning.md  2026-07-08-build.md  2026-07-08-data-platform.md  2026-07-08-frontend-migration.md  2026-07-09-agents-2-3.md  2026-07-09-backend-parallel-build.md  2026-07-09-backend-tier01-rbac.md  2026-07-09-doc-freshness-and-parallelize.md  2026-07-09-doc-freshness-audit.md  2026-07-09-doc-keeper-trial.md  2026-07-09-doc-keeper.md  (+56 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  __init__.py  check_journal_freshness.py  fetch_giab_hg002.py  fetch_panel_fastq.sh  gate_giab.py  generate_reference_pipeline.py  giab_hg002_manifest.json  panel_regions.example.bed  run_giab_pipeline.py  seed_approved_germline.py  seed_giab_demo.py
tests/: test_agent_binding_store.py  test_agent_chat.py  test_agent_output_cache.py  test_api.py  test_archivist.py  test_archivist_retrieval.py  test_artifacts.py  test_artifacts_s3.py  test_auth.py  test_card_readout.py  test_chat_store.py  test_e2e_pipeline.py  test_execution_trace.py  test_fetch_giab.py  test_files_api.py  test_flag_for_review.py  test_gate.py  test_gate_notify.py  test_ingest.py  test_intake_scheduling.py  test_io_path_wiring.py  test_job_store.py  test_library_store.py  test_metrics.py  test_metrics_mapping.py  test_nextflow_api.py  test_nextflow_compile.py  test_nextflow_custom_process.py  test_nextflow_promoted_ports.py  test_nextflow_robustness.py  test_node_author.py  test_node_author_accept_api.py  test_node_author_api.py  test_node_author_conformance.py  test_node_author_importer.py  test_node_author_scaffolds.py  test_node_observations.py  test_notify.py  test_persistence.py  test_persistence_postgres_live.py  (+26 more)
(+281 files in other folders)
