[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeguard"
version = "0.1.0"
description = "AI-assisted provenance and QC decision gate for genomics runs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.1",
]

[project.optional-dependencies]
# Feature extras, installed on demand. app = the Streamlit demo view;
# claude = live synthesis (OFF by default — see pipeguard.synthesis).
app = ["streamlit>=1.31"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
claude = ["anthropic>=0.40", "python-dotenv>=1.0"]

[dependency-groups]
# Dev toolchain (PEP 735; installed by default on `uv sync`).
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "pip-audit>=2.7", # batch-tier dependency vulnerability scan (`make audit`)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# `pipeguard` is imported from the editable install (no src shim). "." puts the
# repo root on the path so tests can import the top-level app-layer packages
# (api/, app/), which are deliberately not part of the installable library.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pipeguard", "api"]

[tool.mypy]
python_version = "3.10"
files = ["src", "app", "api"]
strict = true
plugins = ["pydantic.mypy"]

# Data/UI libs without usable bundled stubs — opaque at the boundary:
#   - pandas ships no py.typed (needs the separate, incomplete pandas-stubs) and
#     is used only for simple CSV I/O;
#   - numpy's stubs use PEP 695 `type` statements that assume a newer target
#     than our 3.10 floor;
#   - streamlit ships no stubs.
# anthropic is deliberately NOT here: it ships types and is the live-API
# integration point, so its usage in synthesis/claude.py is type-checked.
[[tool.mypy.overrides]]
module = ["streamlit.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"
