[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeguard"
version = "0.1.0"
description = "AI-assisted provenance and QC decision gate for genomics runs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.1",
    # Loads the versioned metric_registry.yaml (pipeguard.metrics). Already present
    # transitively via the toolchain; declared directly so the core's dependency on
    # it is explicit and pinned for a reproducible demo rather than incidental.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Feature extras, installed on demand. app = the Streamlit demo view;
# claude = live synthesis (OFF by default — see pipeguard.synthesis).
app = ["streamlit>=1.31"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
claude = ["anthropic>=0.40", "python-dotenv>=1.0"]

[dependency-groups]
# Dev toolchain (PEP 735; installed by default on `uv sync`).
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "pip-audit>=2.7", # batch-tier dependency vulnerability scan (`make audit`)
    # Real stubs for pyyaml (it ships no py.typed). Preferred over a mypy override so
    # the registry loader's yaml calls stay type-checked under strict mypy — the same
    # reasoning that keeps `anthropic` off the override list.
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the curated triage knowledge corpus (ADR-0009) and the versioned metric
# registry inside the wheel so importlib.resources can load them in a non-editable
# install.
pipeguard = ["triage/knowledge/*.jsonl", "metrics/*.yaml"]

[tool.pytest.ini_options]
# `pipeguard` is imported from the editable install (no src shim). "." puts the
# repo root on the path so tests can import the top-level app-layer packages
# (api/, app/), which are deliberately not part of the installable library.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pipeguard", "api"]

[tool.mypy]
python_version = "3.10"
# `scripts` is included so operational scripts (e.g. the GIAB fetcher) are held to
# the same strict typing as the library, even though they ship outside the wheel.
files = ["src", "app", "api", "scripts"]
strict = true
plugins = ["pydantic.mypy"]

# Data/UI libs without usable bundled stubs — opaque at the boundary:
#   - pandas ships no py.typed (needs the separate, incomplete pandas-stubs) and
#     is used only for simple CSV I/O;
#   - numpy's stubs use PEP 695 `type` statements that assume a newer target
#     than our 3.10 floor;
#   - streamlit ships no stubs.
# anthropic is deliberately NOT here: it ships types and is the live-API
# integration point, so its usage in synthesis/claude.py is type-checked.
[[tool.mypy.overrides]]
module = ["streamlit.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"

# slack_sdk is deliberately NOT a dependency (not even an optional extra): the Slack
# notify path lazy-imports it, and the live send is out of scope / disabled (ADR-0010
# §2, task T-015b). Until live send is signed off and the dep is added, mypy cannot
# resolve it — treat it as opaque at that single deferred boundary.
[[tool.mypy.overrides]]
module = ["slack_sdk.*"]
ignore_missing_imports = true
